--- a/sultan/package.json
+++ b/sultan/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "i18next": "^23.16.0",
     "next": "14.2.15",
     "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.3"
+    "react-i18next": "^15.0.3",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
-    "typescript": "^5"
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
+    "typescript": "^5",
+    "typescript-eslint": "^8.9.0"
   }
 }
