--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "i18next": "^23.16.0",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
