--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "framer-motion": "^11.11.10",
     "i18next": "^23.16.0",
     "next": "14.2.15",
     "next-i18next": "^15.3.1",
