--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18",
     "react-i18next": "^15.0.3",
     "react-redux": "^9.1.2",
+    "sass": "^1.80.6",
+    "shortid": "^2.2.16",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
