--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.3",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "sass": "^1.80.6",
     "shortid": "^2.2.16",
