--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,10 +24,13 @@
   "plugins": ["react", "jsx-a11y", "import", "prettier"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "jsx-a11y/anchor-is-valid": "off", // <Link>
+    "jsx-a11y/anchor-is-valid": "off",
     "import/no-unresolved": "off",
     "react/prop-types": "off",
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   },
   "settings": {
     "react": {
